<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdcdcdc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_page_title"
        android:id="@+id/main_page_title_textview"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/heading_margin_top"
        android:textSize="@dimen/heading_text_size" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_app_name"
        android:id="@+id/spotify_streamer_button"
        android:layout_above="@+id/scores_app_button"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:background="@android:color/holo_orange_light"
        android:onClick="onClick"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_name"
        android:id="@+id/scores_app_button"
        android:layout_above="@+id/library_app_button"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:background="@android:color/holo_orange_light"
        android:onClick="onClick"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/library_app_name"
        android:id="@+id/library_app_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:background="@android:color/holo_orange_light"
        android:onClick="onClick"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_app_name"
        android:id="@+id/build_it_bigger_app_button"
        android:layout_below="@id/library_app_button"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:background="@android:color/holo_orange_light"
        android:onClick="onClick"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_app_name"
        android:id="@+id/xyz_reader__appbutton"
        android:layout_below="@id/build_it_bigger_app_button"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:background="@android:color/holo_orange_light"
        android:onClick="onClick"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app_name"
        android:id="@+id/capstone_button"
        android:layout_below="@id/xyz_reader__appbutton"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:onClick="onClick"/>


</RelativeLayout>
